# Game-Engine

./: CMakeLists.txt  README.md  run.sh
cmake/: FindLibUUID.cmake  FindSDL2.cmake
libs/enetpp/: client.h  client_connect_params.h  global_state.h  server.h
old/: compilador.sh  main  main.cpp  simple  simple.cpp
src/: GameObject.cpp  GameObject.hh  Viewport.hh  audio.cpp  audio.hh  background.cpp  background.hh  camera.cpp  camera.hh  config.hpp  engine.cpp  engine.hh  fonte.cpp  fonte.hh  game.cpp  game.h  graphics.cpp  graphics.hh  inputs.cpp  inputs.hh  main.cpp  main.hh  mapa.cpp  mapa.hh  math.hh  memoria.h  sistema.cpp  sistema.hh  sprites.cpp  sprites.hh  system.cpp  system.hh  texto.cpp  texto.hh  textura.cpp  textura.hh  time.hh  window.cpp  window.hh
